# f5-ps-ansible

./: .gitignore  Makefile  README.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml
ansible_collections/f5_ps_ansible/f5os/: COPYING  README.md  galaxy.yml
ansible_collections/f5_ps_ansible/f5os/plugins/module_utils/: json_query.py  utils.py
ansible_collections/f5_ps_ansible/f5os/plugins/modules/: f5os_restconf_config.py  f5os_restconf_get.py  f5os_restconf_post.py
ansible_collections/f5_ps_ansible/f5os/tests/: config.yml
ansible_collections/f5_ps_ansible/f5os/tests/unit/plugins/module_utils/: test_utils.py
docs/: COPYING.md  SUPPORT.md  _config.yml  index.md  walkthrough_todo.md
docs/f5os/: additional_examples.md  ansible_module_approach.md  ansible_module_autodoc.py  api_walkthrough.md  api_walkthrough_ansible.md  f5os_restconf_config.md  f5os_restconf_get.md  getting-started.md  index.md  installation.md  overview-background.md  troubleshooting.md
docs/f5os/ansible_modules_doc/: f5os_restconf_config.md  f5os_restconf_get.md  f5os_restconf_post.md  index.md
docs/f5os/examples-use-cases/: aom-login-banner-idle-timeout.md  index.md  vlan-management-lag-assignment.md
examples/roles/: README.md
examples/roles/f5os_set_user_password/defaults/: main.yaml
examples/roles/f5os_set_user_password/tasks/: main.yaml
examples/roles/f5os_system_tls/defaults/: main.yaml
examples/roles/f5os_system_tls/handlers/: main.yaml
examples/roles/f5os_system_tls/tasks/: main.yaml
examples/roles/f5os_system_tls/vars/: main.yaml
examples/roles/f5os_vlan/defaults/: main.yaml
examples/roles/f5os_vlan/tasks/: main.yaml
examples/roles/f5os_vlan_declarative/defaults/: main.yaml
examples/roles/f5os_vlan_declarative/tasks/: main.yaml
examples/roles/f5os_vlan_declarative/templates/: vlans.yaml.j2
