[tool.poetry]
name = "f5-ps-ansible"
version = "1.3.0"
description = "This collection provides modules to configure F5 BIG-IP appliances running F5OS using the RESTCONF API interface."
authors = ["Simon Kowallik <github@simonkowallik.com>"]
license = "GPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jmespath = { version = "^1.0.1", optional = true }
deepdiff = { version = "^8.0.1", optional = true }

[tool.poetry.extras]
all = ["jmespath", "deepdiff"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pytest = "^8.3.2"
ansible-core = "^2.17.7"
jmespath = "^1.0.1"
deepdiff = "^8.0.1"
bump-my-version = "^0.30.0"


[tool.bumpversion]
current_version = "1.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.bumpversion.files]]
filename = "ansible_collections/f5_ps_ansible/f5os/galaxy.yml"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
